# contract

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  CODEBASE_ANALYSIS.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  QUICK_START.md  README_EXPLORATION.md  TEXT_SEARCH_ANALYSIS.md  TEXT_SEARCH_ANALYSIS_INDEX.md  TEXT_SEARCH_DEBUG_EXAMPLES.md  TEXT_SEARCH_EXECUTIVE_SUMMARY.md  TEXT_SEARCH_FIX_RECOMMENDATIONS.md  TEXT_SEARCH_VISUAL_GUIDE.md
app.ardour.work/: .env.production  .env.template  .eslintrc.cjs  3D_VISUALIZATION_RESEARCH.md  Dockerfile  Dockerfile.prod  FRONTEND_TEST_REPORT.md  FRONTEND_TEST_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  NETWORK_ERROR_FIX.md  README.md  RESEARCH_SETUP.md  Shortlist PE.xlsx  TEST_OUTPUT.txt  WORKFLOW_TESTING_REPORT.md  WORKFLOW_TEST_QUICK_REFERENCE.md  WORKFLOW_TEST_SUMMARY.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  generate_typescript_data.py  index.html  integration-test.js  package-lock.json  package.json  parse_excel_data.py  parsed_portfolio_data.json  production-verification.js  setup-ssl.sh  tailwind.config.js  test-portfolio.js  vite.config.ts  vitest.config.ts.backup
credit-agreement-app/: README.md  docker-compose.yml  sample_credit_agreement.txt
credit-agreement-app/backend/: Dockerfile  main.py  pyproject.toml
omega-workflow/: .env.example  API_EXTRACTION_ENDPOINT_DOCUMENTATION.md  AUTH_TEST_REPORT.md  BBOX_COORDINATE_SYSTEM_FIX.md  BBOX_HIGHLIGHTING_FIX_FINAL.md  BBOX_SCALE_MISMATCH_FIX.md  DEV_MODE_GUIDE.md  DOCKER_CONFIGURATION_SUMMARY.md  DOCKER_FILES_CREATED.txt  DOCKER_SETUP.md  EXTRACTION_FIX_SUMMARY.md  (+57 more)
(+247 files in other folders)
